[package]
name = "nightshade"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"
name = "nightshade_core"

[dependencies]
bitflags = { version = "2.6.0", features = ["serde"] }
bytemuck = { version = "1.19.0", features = ["derive"] }
egui = "0.29.1"
egui-wgpu = { version = "0.29.1", features = ["winit"] }
env_logger = "0.11.5"
freecs = "0.2.15"
futures = "0.3.31"
gilrs = { version = "0.11.0", features = ["serde-serialize"] }
gltf = { version = "1.4.1", features = [
    "KHR_lights_punctual",
    "names",
    "KHR_materials_pbrSpecularGlossiness",
] }
image = "0.24.9"
ktx2 = "0.3.0"
log = "0.4.22"
nalgebra-glm = { version = "0.19.0", features = [
    "convert-bytemuck",
    "serde-serialize",
] }
rayon = "1.10.0"
serde = { version = "1.0.215", features = ["derive"] }
wgpu = { version = "22.1.0", default-features = false }
winit = { version = "0.30.5", features = ["serde"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
egui-winit = "0.29.1"
pollster = "0.3.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
egui-winit = { version = "0.29.1", default-features = false }
wasm-bindgen = "0.2.95"
wasm-bindgen-futures = "0.4.45"
web-sys = { version = "0.3.72", features = [
    "Window",
    "Document",
    "HtmlElement",
    "Node",
    "Text",
] }
web-time = "1.1.0"

[features]
default = ["wgpu/default"]
webgl = ["wgpu/webgl"]
webgpu = ["wgpu/webgpu"]
